# sycl-Docking

./: Makefile  README.md
cuda/: CMakeLists.txt  Makefile  Makefile_legacy
cuda/src/: atom.cuh  distance.cu  distance.h  graph.h  helper.h  main.cu  rotamer.cu  rotamer.cuh  rotation.cu  rotation.cuh  utils.h
report/: Aspirin.qdrep  Aspirin.sqlite  Aspirin.txt  Bendazac.qdrep  Bendazac.sqlite  Bendazac.txt  Diclofenac.qdrep  Diclofenac.sqlite  Diclofenac.txt  Diplosalsalate.qdrep  Diplosalsalate.sqlite  Diplosalsalate.txt  Flurbiprofen.qdrep  Flurbiprofen.sqlite  Flurbiprofen.txt  Focalin.qdrep  Focalin.sqlite  Focalin.txt  Losmiprofen.qdrep  Losmiprofen.sqlite  Losmiprofen.txt  Melatonin.qdrep  Melatonin.sqlite  Melatonin.txt  Myfortic.qdrep  Myfortic.sqlite  Myfortic.txt  Nifuradene.qdrep  Nifuradene.sqlite  Nifuradene.txt  Oxybenzone.qdrep  Oxybenzone.sqlite  Oxybenzone.txt  Propiomazine.qdrep  Propiomazine.sqlite  Propiomazine.txt  Raloxifene.qdrep  Raloxifene.sqlite  Raloxifene.txt  Raloxifene2.qdrep  (+13 more)
src/: atom.cuh  distance.cpp  distance.cu  distance.h  graph.cpp  helper.h  main.cu  rotamer.cpp  rotamer.cu  rotamer.cuh  rotation.cpp  rotation.cu  rotation.cuh
sycl/: CMakeLists.txt
sycl/src/: atom.h  distance.cpp  distance.h  graph.cpp  graph.h  helper.h  main.cpp  rotamer.cpp  rotamer.h  rotation.cpp  rotation.h  utils.h
sycl/src/cuda_legacy/: distance.h  distance_cuda.cu  graph.cpp  helper_cuda.cuh  main_cuda.cu  rotamer_cuda.cuh  rotation_cuda.cuh
